  * Newlines in table cells will now start a paragraph, matching Mediawiki
    behavior.
  * Allow whitespace in front of wiki table syntax (" {|") to match Mediawiki.

Translation Updates:

  * None.


1.1.3
=====

New Features:

  * None.

Bugfixes:

  * Fix three instances where database connections were not being properly
    released.  Reported with extensive debugging help by Igor Zhuk.

Translation Updates:

  * None.


1.1.2
=====

New Features:

  * Updated spam filter patterns.

Bugfixes:

  * "{{ns:}}" should return the same value as "{{ns:0}}" to match Mediawiki.

Translation Updates:

  * Updated Japanese translations (jfujikawa).
  * Updated Japanese translations (nattolover).
  * Updated Portugese (Brazilian) translations (leokury).
  * Updated Russian translations (shar).


1.1.1
=====

New Features:

  * None.

Bugfixes:

  * Merge all fixes from JAMWiki 1.0.7.
  * Heading text and wiki link text that starts with a list tag (example:
    "==#if==" or "[[Link|#text]]") was improperly being parsed as a list item.
  * Spring security 3.0 changed how logout redirection is handled.  Update
    JAMWiki to redirect logout properly.  Note that this change modifies
    the applicationContext-security.xml file.  Reported by Leonardo Silva Kury
    Aragão Mendes.
  * Remove the "plainlinks" pattern from the spam blacklist since that CSS
    class is commonly used on Mediawiki sites.
  * Fix parsing of generated template names of the form "{{Name{{if:|1|2}}}}".
  * Upgrade to Lucene Search 3.4 which fixes a bug where an operating system
    crash, hardware crash, or power loss could easily corrupt the index.
  * Fix an issue where the cache was not being properly cleared when a topic
    version was purged using the Special:Manage tool.
  * System topics such as the LeftMenu and BottomArea should never display
    section "edit" links or a table of contents.  Reported by Robert Hulme.

Translation Updates:

  * None.


1.1
===

New Features:
