@@ -45,11 +45,11 @@
 <div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
 </div>
 <p>plain image with caption</p>
-<p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></a></p>
+<p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg" title="this is a caption blah blah blah blah blah blah blah blah blah blah blah"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="this is a caption blah blah blah blah blah blah blah blah blah blah blah" /></a></p>
 <p>left-aligned image with caption</p>
-<div class="floatleft"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></a></div>
+<div class="floatleft"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg" title="this is a caption blah blah blah blah blah blah blah blah blah blah blah"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="this is a caption blah blah blah blah blah blah blah blah blah blah blah" /></a></div>
 <p>unformatted image with caption</p>
-<div class="floatnone"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></a></div>
+<div class="floatnone"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg" title="this is a caption blah blah blah blah blah blah blah blah blah blah blah"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="this is a caption blah blah blah blah blah blah blah blah blah blah blah" /></a></div>
 <p>thumbnail with caption</p>
 <div class="thumb tright">
 <div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
@@ -57,7 +57,7 @@
 </div>
 </div>
 <p>bordered image with caption</p>
-<p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg thumbborder" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></a></p>
+<p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg" title="this is a caption blah blah blah blah blah blah blah blah blah blah blah"><img class="wikiimg thumbborder" src="/files/test_image.jpg" width="400" height="267" alt="this is a caption blah blah blah blah blah blah blah blah blah blah blah" /></a></p>
 <p>framed image with caption</p>
 <div class="thumb tright">
 <div class="thumbinner" style="width:402px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></a>
@@ -65,7 +65,7 @@
 </div>
 </div>
 <p>frameless image with caption</p>
-<p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></p>
+<p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg" title="this is a caption blah blah blah blah blah blah blah blah blah blah blah"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="this is a caption blah blah blah blah blah blah blah blah blah blah blah" /></a></p>
 <p>left-aligned thumbnail with caption</p>
 <div class="thumb tleft">
 <div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
@@ -89,7 +89,7 @@
 </div>
 <p>vertical align left</p>
 <div class="floatleft"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" style="vertical-align: baseline" /></a></div>
-<p>alt tag standard <a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="alternate text" /></a></p>
+<p>alt tag standard <a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg" title="caption"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="alternate text" /></a></p>
 <div class="thumb tright">
 <div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="alternate text" /></a>
 <div class="thumbcaption">caption</div>
@@ -178,6 +178,10 @@
 <div class="thumbcaption">caption2</div>
 </div>
 </div>
+<p>caption test #11 <a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg" title="caption"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="caption" /></a></p>
+<p>caption test #12 <a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg" title="caption"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="caption" /></a></p>
+<p>caption test #13 <a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg" title="caption"><img class="wikiimg thumbborder" src="/files/test_image.jpg" width="400" height="267" alt="caption" /></a></p>
+<p>caption test #14 <a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg" title="caption &quot; test"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="caption &quot; test" /></a></p>
 <p><a href="/wiki/en/Special:Upload?topic=Image:Invalid_Image_%22Name%22.jpg" class="edit" title="Special:Upload">Image:Invalid Image &quot;Name&quot;.jpg</a></p>
 <p>image link on alt virtual wiki</p>
 <p><a href="/wiki/test/Image:Test_Image.jpg" title="Image:Test Image.jpg">Image:Test Image.jpg</a></p>
